# ld59

./: .gitignore  cabal.project  flake.nix  generate-jsffi.sh  justfile  notes.md  test.cabal
app/: Test.hs  TestECS.hs
games/ld59/: Main.hs
games/ld59-prep/: Main.hs  PrepECS.hs
games/ld59/LD59/: Art.hs  Controls.hs  Dir.hs  Draw.hs  Env.hs  Init.hs  Screen.hs  Snake.hs  Tick.hs  Wave.hs  World.hs
games/ld59/LD59/Jfxr/: JSFFI.hs  Types.hs
games/ld59/main/: Main.hs
html/: test-index.html
lib/jsffi-typed/: LICENSE  jsffi-typed.cabal
lib/jsffi-typed/src/JSFFI/: Typed.hs
lib/pixi-js-hs/: CHANGELOG.md  pixi-js.cabal
nix/: jfxr.nix
scripts/: mk-jfxr-hs.hs
scripts/json-type-gen/: JsonTypeGen.hs
src/: Lib.hs
src/Pixi/: Types.hs
static/ld59/: index.html  main.js
static/ld59-prep/: index.html  main.js
static/test/: index.html  main.js  wasm-init.js
