cabal-version: 3.14
name: test
version: 0.3.0.0
synopsis: Haskell wasm test
-- A longer description of the package.
description:
  This is a test package for the Haskell wasm toolchain.

-- The license under which the package is released.
license: MIT
-- The file containing the license text.
license-file: LICENSE
-- The package author(s).
author: Matthias Pall Gissurarson
-- An email address to which users can send suggestions, bug reports, and patches.
maintainer: mpg@mpg.is
-- A copyright notice.
-- copyright:
category: Development
build-type: Simple
-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files: CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
extra-source-files:
  README.md

homepage: https://github.mpg.is/wasm-game

source-repository head
  type: git
  location: https://github.com/Tritlo/wasm-game.git

common warnings
  ghc-options: -Wall
  cc-options: -Wnomain-return-type

library
  hs-source-dirs: src
  build-depends:
    apecs,
    base,
    ghc-experimental

  default-language: GHC2021
  -- cabal-gild: discover src
  exposed-modules:
    Lib
    Pixi.Types

executable ld59-prep
  import: warnings
  hs-source-dirs: games/ld59-prep
  main-is: Main.hs
  default-language: GHC2021
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=wasmMain"

  -- cabal-gild: discover games/ld59-prep --exclude=games/ld59-prep/Main.hs
  other-modules: PrepECS
  build-depends:
    apecs,
    base,
    ghc-experimental,
    safe,
    test

executable ld59
  import: warnings
  hs-source-dirs: games/ld59
  main-is: Main.hs
  default-language: GHC2021
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=wasmMain"

  -- cabal-gild: discover games/ld59 --exclude=games/ld59/Main.hs
  other-modules:
    LD59.Controls
    LD59.Dir
    LD59.Jfxr.JSFFI
    LD59.Snake
    LD59.World

  build-depends:
    apecs,
    base,
    containers,
    extra,
    generic-lens,
    ghc-experimental,
    lens,
    linear,
    safe,
    test

executable test
  -- Import common warning flags.
  import: warnings
  -- .hs or .lhs file containing the Main module.
  main-is: Test.hs
  -- cabal-gild: discover app --exclude=app/Test.hs
  other-modules: TestECS
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  -- Other library packages from which modules are imported.
  build-depends:
    apecs,
    base,
    ghc-experimental,
    test

  -- Directories containing source files.
  hs-source-dirs: app
  -- Base language which the package is written in.
  default-language: GHC2021
  -- GHC options for reactor module: disable Haskell main, use reactor model, export main symbol
  ghc-options:
    -no-hs-main
    -optl-mexec-model=reactor
    "-optl-Wl,--export=wasmMain"
