cabal-version: 3.0
name: jsffi-typed
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Armando Ramirez
maintainer: armando.m.ramirez@gmail.com
-- copyright:
category: Web
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  -- cabal-gild: discover src
  exposed-modules: JSFFI.Typed
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.20.2.0
  hs-source-dirs: src
  default-language: GHC2024
